--- a/UNIP - Ciência da Computação/4º Semestre/Aplic. Program. Orientada Objeto/AulaPEE/CrudPessoas/src/main/java/Apresentacao/frmCadastro.form
+++ b/UNIP - Ciência da Computação/4º Semestre/Aplic. Program. Orientada Objeto/AulaPEE/CrudPessoas/src/main/java/Apresentacao/frmCadastro.form
@@ -134,6 +134,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txfNome">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfNomeActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txfCPF">
     </Component>
